--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <body>
         <h2>Flask Web App</h2>
         <diV>
-            <p>ようこそ {{ user_nicname }}さん</p>
+            <p>ようこそ!! {{ user_nicname }}さん</p>
         </diV>
         <p>使いたい機能を選んでね</p>
         <form method="POST" action="pref_quiz">
